<resources>
    <string name="app_name">PlatePro</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="for_you">For You</string>
    <string name="search">Search</string>
    <string name="favourate">Favourate</string>
    <string name="Favourate">Favourate</string>
    <string name="Category">Category</string>
    <string name="Country">Country</string>
    <string name="Ingredients">Ingredients</string>
    <string name="meals_by_category">Meals by Category</string>
    <string name="meals_by_country">Meals by Country</string>
    <string name="meals_by_ingredients">Meals by Ingredients</string>
    <string name="meal_inspiration">Meal Inspiration</string>
    <string name="textview">TextView</string>
    <string name="UnFavourate_Button">UnFavourate Button</string>
    <string name="todo">TODO</string>
    <string name="Add_to_Calendar">Add to Calendar</string>
    <string name="favourate_action_button">Favourate action button</string>
    <string name="meal_country">Meal Country</string>
    <string name="meal_name">Meal Name</string>
    <string name="mealview">MealView</string>
    <string name="textviewSteps">TextViewSteps</string>
    <string name="Calendar">Calendar</string>
    <string name="favorite">Favorite</string>
    <string name="home">Home</string>
    <string name="CountDetailMealName">CountDetailMealName</string>
    <string name="No_Internet">No Internet</string>
    <string name="Retry">Retry</string>
</resources>