<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/material_dynamic_neutral95">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/material_dynamic_neutral95">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginStart="100dp"
            android:layout_marginTop="124dp"
            android:contentDescription="@string/mealview"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_launcher_background" />

        <TextView
            android:id="@+id/tvMealName2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="156dp"
            android:layout_marginTop="12dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/meal_name"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageView3" />

        <TextView
            android:id="@+id/tvMealCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="156dp"
            android:layout_marginTop="12dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/meal_country"
            android:textAlignment="textStart"
            android:textColor="@color/material_dynamic_neutral10"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvMealName2" />

        <ImageButton
            android:id="@+id/imgBtnFavDetailedIngred"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/circle_background"
            android:contentDescription="@string/favourate_action_button"
            android:src="@drawable/ic_favorite_selector"
            app:layout_constraintEnd_toEndOf="@+id/imageView3"
            app:layout_constraintTop_toTopOf="@id/imageView3" />

        <Button
            android:id="@+id/btnAddtoCalender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/material_dynamic_neutral50"
            android:fontFamily="sans-serif-medium"
            android:text="@string/Add_to_Calendar"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:icon="@drawable/baseline_calendar_month_24"
            app:iconTint="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvMealCount" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recvIngred"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnAddtoCalender" />

        <WebView
            android:id="@+id/webView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recvIngred"
            tools:ignore="WebViewLayout" />

        <TextView
            android:id="@+id/tvSteps"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:fontFamily="sans-serif-medium"
            android:lineSpacingExtra="2dp"
            android:padding="8dp"
            android:text="@string/textviewSteps"
            android:textAlignment="textStart"
            android:textColor="@color/material_dynamic_neutral10"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/webView" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

